tests/ui/reflexive_unstubbed_multiple.stderr
error: `make` is not dyn-compatible (no self receiver), so the reflexive impl cannot forward it; annotate it `#[dyn_shim(panic)]` to provide a panicking stub, or give it a default body
 --> tests/ui/reflexive_unstubbed_multiple.rs:9:8
  |
9 |     fn make() -> i32;
  |        ^^^^

error: `build` is not dyn-compatible (generic type or const parameter), so the reflexive impl cannot forward it; annotate it `#[dyn_shim(panic)]` to provide a panicking stub, or give it a default body
  --> tests/ui/reflexive_unstubbed_multiple.rs:10:8
   |
10 |     fn build<T>(&self, seed: T) -> i32;
   |        ^^^^^
